--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "repository": "#",
-  "license": "UNLICENSED",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
+  "description": "My webpack project",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/btaps/threejs-landing-page.git"
+  },
+  "author": "btaps",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/btaps/threejs-landing-page/issues"
+  },
+  "homepage": "https://github.com/btaps/threejs-landing-page#readme",
+  "devDependencies": {
+    "@webpack-cli/generators": "^3.0.1",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.1"
   },
   "dependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/preset-env": "^7.13.5",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.1.0",
-    "dat.gui": "^0.7.7",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.1",
-    "html-webpack-plugin": "^5.2.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "portfinder-sync": "0.0.2",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^2.0.0",
-    "three": "^0.126.0",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.5",
+    "ts-loader": "^9.4.2",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
