--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "my-webpack-project",
-  "version": "1.0.0",
-  "description": "My webpack project",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/btaps/threejs-landing-page.git"
-  },
-  "author": "btaps",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/btaps/threejs-landing-page/issues"
-  },
-  "homepage": "https://github.com/btaps/threejs-landing-page#readme",
-  "devDependencies": {
-    "@webpack-cli/generators": "^3.0.1",
-    "webpack": "^5.76.3",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.1"
-  },
-  "dependencies": {
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "ts-loader": "^9.4.2",
-    "workbox-webpack-plugin": "^6.5.4"
-  }
+	"name": "my-webpack-project",
+	"version": "1.0.0",
+	"description": "My webpack project",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "webpack --mode=production --node-env=production",
+		"build:dev": "webpack --mode=development",
+		"build:prod": "webpack --mode=production --node-env=production",
+		"watch": "webpack --watch",
+		"serve": "webpack serve"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/btaps/threejs-landing-page.git"
+	},
+	"author": "btaps",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/btaps/threejs-landing-page/issues"
+	},
+	"homepage": "https://github.com/btaps/threejs-landing-page#readme",
+	"devDependencies": {
+		"@webpack-cli/generators": "^3.0.1",
+		"webpack": "^5.76.3",
+		"webpack-cli": "^5.0.1",
+		"webpack-dev-server": "^4.13.1"
+	},
+	"dependencies": {
+		"@types/three": "^0.149.0",
+		"css-loader": "^6.7.3",
+		"html-webpack-plugin": "^5.5.0",
+		"mini-css-extract-plugin": "^2.7.5",
+		"style-loader": "^3.3.2",
+		"three": "^0.150.1",
+		"ts-loader": "^9.4.2",
+		"workbox-webpack-plugin": "^6.5.4"
+	}
 }
